...

<resources>
    <string name="app_name">portON</string>
    <string name="umod_config_bar_title">Configurar Módulo</string>
    <string name="ongoing_notif_enabled">NOTIFICACIÓN PERMANENTE ACTIVADA</string>
    <string name="ongoing_notif_disbled">NOTIFICACIÓN PERMANENTE DESACTIVADA</string>
    <string name="menu_filter_umods">Filtro</string>
    <string name="menu_clear_umods">Borrar Completadas</string>
    <string name="menu_delete_task">Borrar Módulo</string>
    <string name="navigation_view_header_title">portON</string>
    <string name="alias_hint">Alias de Apertura</string>


...
    <string-array name="list_tasks_array">
        <item>@string/nav_all_umods</item>
        <item>@string/nav_online_umods</item>
        <item>@string/nav_completed_umods</item>
    </string-array>

    <string name="nav_all_umods">Todos</string>
    <string name="nav_online_umods">Activos</string>
    <string name="nav_completed_umods">Completados</string>
    <string name="label_umods_all">Todos los Módulos</string>
    <string name="label_umods_active">Fuera de notificación</string>
    <string name="label_umods_completed">Dentro de Notificación.</string>
    <string name="no_umdos_all">No se encontraron módulos conectados a la red.</string>
    <string name="no_umods_active">No tienes Módulos Activos.</string>
    <string name="no_umods_completed">No tienes módulos con Notificación Activa.</string>

    <string name="refresh_umods">Refrescar Módulos</string>
    <string name="umod_users_nav_all">Todos</string>
    <string name="umod_users_nav_admins">Administradores</string>
...
    <string name="umod_users_label_admins">Administradores</string>
    <string name="umod_users_label_not_admins">Usuarios Regulares</string>
    <string name="app_user_phone_tag">REGISTRO</string>
    <string name="app_user_phone_hint">Número de Celular (ejemplo: 3514123456)</string>
    <string name="umod_action_button_when_owned">O/C</string>
    <string name="umod_action_button_when_open_alien">REQ</string>
    <string name="request_access_failed_message">SOLICITUD DE ACCESO FALLIDA</string>
    <string name="request_access_completed_message">SOLICITUD DE ACCESO ENVIADA</string>
    <string name="configuration_error"> FALLÓ AL CONFIGURARSE</string>
    <string name="configuration_success"> CONFIGURADO EXITOSAMENTE!</string>
    <string name="firmware_update_dialog__title">ACTUALIZACIÓN DE FIRMWARE</string>
    <string name="firmware_update_dialog__started_message">Esta operación actualizará el software del módulo pero todas sus configuraciones serán conservadas.</string>
    <string name="firmware_update_dialog__cancel_button">CANCELAR</string>
    <string name="delete_user_success_message">USUARIO ELIMINADO</string>
...
    <string name="notif_loading_progress_subtext">BUSCANDO MÓDULOS…</string>
    <string name="notif_triggering_progress_subtext">INTENTANDO ACCIONAR…</string>
    <string name="notif_accessing_progress_subtext">SOLICITANDO PERMISO…</string>
    <string name="ongoing_notif_enabled_failed">FALLO AL HABILITAR LA NOTIFICACIÓN</string>
    <string name="ongoing_notif_disbled_failed">FALLO AL DESHABILITAR LA NOTIFICACIÓN</string>
    <string name="umod_users_bar_title">Usuarios</string>
    <string name="trigger_success_message">ACCIONAMIENTO EXITOSO</string>
    <string name="trigger_fail_message">ACCIONAMIENTO FALLIDO</string>
    <string name="no_other_umod_users_found">No se encontratron otros usuarios configurados en el módulo.</string>
    <string name="loading_umod_error">ERROR AL CARGAR MÓDULOS</string>
    <string name="loading_umod_users_error">ERROR AL CARGAR USUARIOS</string>
    <string name="all_pending_users_cleared">TODOS LOS USUARIOS PENDIENTES ELIMINADOS</string>
    <string name="all_alien_umods_removed">MODULOS AJENOS REMOVIDOS</string>
    <string name="firmware_update_cancel_message">Actualización Cancelada.</string>
...
