...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/umod_item_settings_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:background="@drawable/ic_settings_black_48dp"/>
...
                <RelativeLayout
                    android:id="@+id/umod_item_upper_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/card_item_notif_indicator"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="10dp"
                        android:textOff=""
                        android:textOn=""
                        android:src="@drawable/notif_toggle_selector"/>

                    <TextView
                        android:id="@+id/card_main_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toStartOf ="@id/card_item_notif_indicator"
                        android:layout_marginEnd="2dp"
                        android:textStyle="bold"
...
                    android:id="@+id/umod_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/item_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/connection_tag"
                        android:textSize="12sp"
                        android:layout_centerVertical="true"
                        android:text="Hace 23 min"
...
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_marginEnd="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ongoing_notification__controls_layout_background">
                        <TextView
                            android:id="@+id/connection_tag_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="ONLINE"
                            android:textAllCaps="true"
                            android:textStyle="bold"
...
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ongoing_notification__controls_layout_background">

                        <TextView
                            android:id="@+id/gate_status_tag_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="2dp"
                            android:paddingEnd="10dp"
...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.ncorti.slidetoact.SlideToActView
                        android:id="@+id/card_slider"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:text="SLIDE TO ACT"
                        app:outer_color="@color/trigger_slider_background"
                        app:inner_color="@color/white"
...
