...
                android:layout_marginRight="@dimen/list_item_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />
                -->

            <ListView
                android:id="@+id/umods_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="80dp"
...
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/no_umods_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic__modules_not_found_black" />

        <TextView
            android:id="@+id/no_umods_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/no_umdos_all"
            android:textColor="#8864ffda"
...
