...
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/notif_icon_container">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true" />

        <TextView
...
